fix alignment in hero section

--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,7 @@ a {
 .container {
     display: flex;
     gap: 48px;
+    justify-content: center;
 }
 
 a,
@@ -108,6 +109,7 @@ img {
     font-size: 18px;
     color: #878788;
     text-align: center;
+    max-width: 170px;
 }
 
 /* Quote Section */
